# aml-reports

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  report_template.json
.github/workflows/: build.yml
src/: attachements.rs  auth.rs  build.rs  excel.rs  launch.rs  lib.rs  main.rs  read_excel.rs  report_info.rs  report_template.json  response.rs  template.rs
src/codes/: account_status.rs  account_type.rs  age_range.rs  amendment.rs  bank_account_status_codes.rs  corporate_type.rs  country.rs  country_codes.rs  currency.rs  document_type.rs  gender.rs  mod.rs  occupation.rs  personal_id.rs  personal_id_codes.rs  utils.rs
src/excel/: bank_account_type_codes.rs  gender_codes.rs  mod.rs  occupation_codes.rs  section1.rs  section2.rs  section3.rs  section4.rs  section5.rs  section6.rs
src/payload/: entities.rs  form.rs  general_info.rs  info.rs  mod.rs  section1.rs  section2.rs  section3.rs  section4.rs  section5.rs  section6.rs  tab0.rs
src/utils/: datetime.rs  excel.rs  mod.rs  setup.rs
